--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -63,13 +63,13 @@ const currentPath = Astro.url.pathname;
             currentPath === "/blogs" ? "text-cyan-600" : "hover:text-cyan-600"
           }`}
         >
-          <span class="relative z-10">Blog</span>
+          <span class="relative z-10">Blogs</span>
           <span class="absolute bottom-0 left-0 w-full h-0.5 bg-cyan-500 transform scale-x-0 origin-left transition-transform duration-300 group-hover:scale-x-100"></span>
         </a>
       </li>
       <li class="p-3 xl:p-6 relative group">
         <a
-          href="/about"
+          href="/aboutus"
           class={`relative inline-block overflow-hidden py-1 px-2 transition-all duration-300 ${
             currentPath === "/about" ? "text-cyan-600" : "hover:text-cyan-600"
           }`}
@@ -217,11 +217,11 @@ const currentPath = Astro.url.pathname;
           <svg class="w-5 h-5 mr-3 text-cyan-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9a2 2 0 00-2-2h-2m-4-3H9M7 16h6M7 8h6v4H7V8z"></path>
           </svg>
-          Blog
+          Blogs
         </a>
       </li>
       <li class="transform transition-transform duration-300 hover:translate-x-2">
-        <a href="/about" class={`flex items-center py-3 px-6 ${
+        <a href="/aboutus" class={`flex items-center py-3 px-6 ${
           currentPath === "/aboutus" ? "text-cyan-600" : "hover:text-cyan-600"
         } transition-colors duration-300`}>
           <svg class="w-5 h-5 mr-3 text-cyan-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
